# Smarthome

./: .gitignore  README.md
client/: CMakeLists.txt  tags
client/config/: configfile
client/include/: User.h  chat_ui.h  client.h  color.h  common.h  head.h  send_chat.h  thread_pool.h
client/source/: chat_ui.c  client.c  common.c  log.c  net.c  send_chat.c  thread_pool.c
client/tests/: client_window.c  test.c
server/: CMakeLists.txt  tags
server/config/: SmartHome.config  server_config.config
server/include/: CMakeCache.txt  Cgo  Makefile  Non-blocking.h  cmake_install.cmake  commom.h  config.h  datatype.h  head.h  net.h  server.h  transport_socket.h
server/include/DBG/: DBG  DBG.h  a.out  color.h
server/src/: Non-blocking.cpp  common.cpp  config.cpp  net.cpp  server.cpp  transport_socket.cpp
server/test/: SmartHome_server.cpp  a.out
